# pulsar-plugin

./: AUTHORS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  jupyter.Dockerfile  main.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: lint.yml  pytest.yaml  sqaaas.yaml
src/itwinai/plugins/my_awesome_plugin/another_plugin_subfolder/: yet_another_module.py
src/itwinai/plugins/my_awesome_plugin/plugin_subfolder/: another_module.py
src/itwinai/plugins/pulsar-plugin/models/: trained_CNN1D_test_v0.pt  trained_Filter_test_v0.pt
src/itwinai/plugins/pulsar-plugin/syn_payload/: train_v0_0.json  train_v0_0_payload_detected.json  train_v0_0_payload_flux.json  train_v0_0_payload_raw.json  train_v0_0_payload_tobe_propagated.json  train_v0_1.json  train_v0_10_payload_detected.json  train_v0_10_payload_flux.json  train_v0_10_payload_raw.json  train_v0_10_payload_tobe_propagated.json  train_v0_11_payload_detected.json  train_v0_11_payload_raw.json  train_v0_11_payload_tobe_propagated.json  train_v0_12_payload_detected.json  train_v0_12_payload_flux.json  train_v0_12_payload_raw.json  train_v0_12_payload_tobe_propagated.json  train_v0_13_payload_detected.json  train_v0_13_payload_flux.json  train_v0_13_payload_raw.json  train_v0_13_payload_tobe_propagated.json  train_v0_14_payload_detected.json  train_v0_14_payload_flux.json  train_v0_14_payload_raw.json  train_v0_14_payload_tobe_propagated.json  train_v0_15_payload_detected.json  train_v0_15_payload_flux.json  train_v0_15_payload_raw.json  train_v0_16_payload_detected.json  (+180 more)
tests/: test_example.py
(+53 files in other folders)
